<resources>
    <string name="app_name" translatable="false">DiaryNutrition</string>
    <string name="app_name_ru"> </string>
    <string name="act_food">Food</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="action_back">Back</string>
    <string name="action_add_food">Add food</string>
    <string name="action_add_meal">Add meal</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_hide">Hide</string>
    <string name="action_show">Show</string>
    <string name="action_subscribe">Subscribe</string>
    <string name="action_buy">Buy</string>
    <string name="action_manage">Manage</string>
    <string name="action_refresh">Refresh</string>
    <string name="ad_app_id" translatable="false">ca-app-pub-2180848868226246~4003747218</string>
    <string name="ad_rewarded_user_food" translatable="false">ca-app-pub-2180848868226246/4738143943</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-2180848868226246/4304798415</string>
    <string name="banner_ad_inter_id" translatable="false">ca-app-pub-2180848868226246/9729746416</string>
    <string name="banner_ad_inter_water_id" translatable="false">ca-app-pub-2180848868226246/2409214497</string>
    <string name="billing_button_buy">Disable</string>
    <string name="billing_ads_disable">Ads is disabled</string>
    <string name="billing_ads_enable">Ads is enabled</string>
    <string name="diary_date_today">Today</string>
    <string name="diary_date_yesterday">Yesterday</string>
    <string name="diary_date_tomorrow">Tomorrow</string>
    <string name="diary_header_remain">Remaining</string>
    <string name="diary_header_total">Total</string>
    <string name="menu_action_food">Food</string>
    <string name="menu_action_weight">Weight</string>
    <string name="menu_action_water">Water</string>
    <string name="menu_action_switch">Remaining/Total</string>
    <string name="title_diary">Diary</string>
    <string name="title_settings">Settings</string>
    <string name="title_weight">Weight</string>
    <string name="title_summary">Summary</string>
    <string name="title_rate">Rate app</string>
    <string name="title_premium">Premium</string>
    <string name="title_search">Food search</string>
    <string name="title_program">Nutrition program</string>
    <string name="title_user_meal">Meals</string>
    <string name="text_helper_optional">optional</string>
    <string name="card_button_more">View more</string>
    <string name="food_carbo">CRB</string>
    <string name="food_prot">PRT</string>
    <string name="food_fat">FAT</string>
    <string name="food_cal">CAL</string>
    <string name="food_verified">Verified</string>
    <string name="food_gi">Glycemic index</string>
    <string name="weight_week">Week</string>
    <string name="weight_month">Month</string>
    <string name="sum_recommend">Recommended</string>
    <string name="sum_total">Total</string>
    <string name="sum_goal">Goal</string>
    <string name="subscription_1">1 Month</string>
    <string name="subscription_2">3 Months</string>
    <string name="subscription_3">12 Months</string>
    <string name="meal_choose">Select meal</string>
    <string name="meal_food_count">Selected %d</string>
    <string name="radio_gender_male">Male</string>
    <string name="radio_gender_female">Female</string>
    <string name="radio_purpose_lose">Weight loss</string>
    <string name="radio_purpose_hold">Weight maintenance</string>
    <string name="radio_purpose_gain">Weight gain</string>
    <string name="dialog_cancel">Back</string>
    <string name="dialog_add">Add</string>
    <string name="time">Time</string>
    <string name="serving">Serving</string>
    <string name="meal">Meal</string>
    <string name="name">Name</string>
    <string name="serv_nstd" translatable="false">1</string>
    <string name="dialog_serv_std" translatable="false">100</string>
    <string name="dialog_title_delete_alert">Delete the meal?</string>
    <string name="dialog_message_delete_alert">Entries added to this meal will be moved to </string>
    <string name="dialog_change_date">Select</string>
    <string name="dialog_title_date">Select date</string>
    <string name="dialog_title_change">Food change</string>
    <string name="dialog_title_change_serving">Change serving size</string>
    <string name="dialog_title_change_meal">Change meal name</string>
    <string name="dialog_food_title">New product</string>
    <string name="dialog_title_weight">Type your weight</string>
    <string name="dialog_title_c">Enter calories</string>
    <string name="dialog_title_water_edit">Enter amount of water, ml</string>
    <string name="dialog_title_water_serving">Enter amount of water</string>
    <string name="dialog_title_water">Adding water</string>
    <string name="dialog_title_meal_add">Enter meal name</string>
    <string name="dialog_title_food_reward_ad">User food limit reached</string>
    <string name="dialog_message_food_ad">You need to have Premium or watch an advertisement to add food further</string>
    <string name="dialog_watch_ad">Watch an ad</string>
    <string name="dialog_premium">Get Premium</string>
    <string name="dialog_backup_title">Backup database</string>
    <string name="dialog_backup_positive">Create</string>
    <string name="dialog_backup_button_check">Check if enabled</string>
    <string name="dialog_backup_info_1">This feature creates backup file, which will be uploaded to Google Drive by Google Backup. For this to happen, it must be enabled in the smartphone system settings.</string>
    <string name="dialog_backup_info_2">Local backup version is created automatically approximately every day when device is idle.</string>
    <string name="dialog_backup_button_failure">Something has gone wrong!</string>
    <string name="dialog_restore_title">Restore database?</string>
    <string name="dialog_restore_message">Database will be restored from the backup and your current data will be removed</string>
    <string name="dialog_restore_positive">Restore</string>
    <string name="dialog_add_f">Add</string>
    <string name="dialog_cancel_f">Back</string>
    <string name="dialog_food_name">Food name</string>
    <string name="dialog_weight">Weight</string>
    <string name="dialog_weight_add">Add weight</string>
    <string name="dialog_date">Date</string>
    <string name="dialog_change">Change</string>
    <string name="dialog_amount_water">Amount, ml</string>
    <string name="dialog_ml">ml</string>
    <string name="dialog_water_value1" translatable="false">250</string>
    <string name="dialog_water_value2" translatable="false">500</string>
    <string name="dialog_water_value3" translatable="false">750</string>
    <string name="dialog_water_value4" translatable="false">1000</string>
    <string name="dialog_water_help">Hold to change values</string>
    <string name="description_filter_result">Filter result</string>
    <string name="description_drag_handle">Drag item</string>
    <string name="description_meal_user">User meal</string>
    <string name="description_meal_default">Default meal</string>
    <string name="context_menu_del">Delete</string>
    <string name="context_menu_change">Change</string>
    <string name="context_menu_change_serving">Change serving</string>
    <string name="context_menu_change_time">Change time</string>
    <string name="context_menu_favor">To favorite</string>
    <string name="context_menu_favor_del">Remove</string>
    <string name="context_menu_remove">Remove</string>
    <string name="context_menu_copy">Copy</string>
    <string name="context_menu_paste">Paste</string>
    <string name="calendar">Calendar</string>
    <string name="pref_title_user">Personal data</string>
    <string name="pref_title_program">Nutrition program</string>
    <string name="pref_title_ui">Interface</string>
    <string name="pref_title_data">Data</string>
    <string name="pref_gender">Gender</string>
    <string name="pref_birthday">Birthday</string>
    <string name="pref_height">Height</string>
    <string name="pref_activity">Activity</string>
    <string name="pref_purpose">Goal</string>
    <string name="pref_program_edit">Customize PFC</string>
    <string name="pref_program_meals">Customize meals</string>
    <string name="pref_program_meals_user_hide">Hide empty user meals</string>
    <string name="pref_program_reset">Reset program</string>
    <string name="pref_ui_tab_default">Default tab</string>
    <string name="pref_ui_water_card">Water counter</string>
    <string name="pref_ui_app_language">Application language</string>
    <string name="pref_data_backup">Backup</string>
    <string name="pref_data_restore">Restore</string>
    <string name="pref_data_path">Path</string>
    <string name="pref_data_language">Database language</string>
    <string name="pref_policy">Privacy Policy</string>
    <string name="intro_done">Done</string>
    <string name="intro_title">Nutrition program</string>
    <string name="intro_gender">Choose gender</string>
    <string name="intro_birthday">Birthday</string>
    <string name="intro_height">Height, cm</string>
    <string name="intro_height_default" translatable="false">170</string>
    <string name="intro_height_error">Type your height</string>
    <string name="intro_weight">Weight, kg</string>
    <string name="intro_weight_error">Type your weight</string>
    <string name="intro_activity">What is your activity?</string>
    <string name="intro_activity_name_1">Sedentary</string>
    <string name="intro_activity_name_2">Lightly Active</string>
    <string name="intro_activity_name_3">Moderately Active</string>
    <string name="intro_activity_name_4">Very Active</string>
    <string name="intro_activity_1">Little or no exercise</string>
    <string name="intro_activity_2">Light exercise or sport 1—3 days per week</string>
    <string name="intro_activity_3">Moderate exercise or sport 3 – 5 days per week</string>
    <string name="intro_activity_4">Hard exercise or sport 6 – 7 days per week</string>
    <string name="intro_purpose">Choose your goal</string>
    <string name="intro_nutrition_cal">kcal</string>
    <string name="intro_nutrition_consume">You should consume</string>
    <string name="intro_nutrition_ratio">Recommended ratio of PFC</string>
    <string name="intro_nutrition_info">You can change these values in settings</string>
    <string name="macronutrients">Macronutrients</string>
    <string name="water">Water</string>
    <string name="message_backpress">Repeat action again to exit</string>
    <string name="message_meal">Meal name is not entered</string>
    <string name="message_serving">Serving size is not entered</string>
    <string name="message_program_perc">Amount of percent must be equal 100</string>
    <string name="message_program_gram">Calories amount and PFC ratio will change while editing of macronutrients</string>
    <string name="message_program_null">Macronutrients amount must be above zero</string>
    <string name="message_favorite_add">Added to favorite</string>
    <string name="message_food_del">Product will not appear next time</string>
    <string name="message_dialog_food_empty">Not all fields are filled</string>
    <string name="message_dialog_food_point">One or more fields contain invalid number format</string>
    <string name="message_dialog_weight">Weight is not entered</string>
    <string name="message_dialog_cal">Calories are not entered</string>
    <string name="message_dialog_water">Water is not entered</string>
    <string name="unit_kilogram">kg</string>
    <string name="meal1">Breakfast</string>
    <string name="meal2">Second breakfast</string>
    <string name="meal3">Lunch</string>
    <string name="meal4">Dinner</string>
    <string name="meal5">Snacks</string>
</resources>