<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/background_material_2">
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorPrimaryDark"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:elevation="3dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intro_title"
            android:textSize="28sp"
            android:textColor="@android:color/white"
            android:layout_gravity="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#F5F5F5"
        android:padding="32dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intro_purpose"
            android:textSize="16sp"
            android:paddingBottom="16dp"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rg_purpose"
            android:paddingBottom="16dp">

            <android.support.v7.widget.AppCompatRadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rb_purpose1"
                android:text="@string/radio_purpose_lose"
                android:textSize="16sp"
                android:checked="true"/>

            <android.support.v7.widget.AppCompatRadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rb_purpose2"
                android:text="@string/radio_purpose_hold"
                android:textSize="16sp"/>

            <android.support.v7.widget.AppCompatRadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rb_purpose3"
                android:text="@string/radio_purpose_gain"
                android:textSize="16sp"/>

        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:listDivider"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/intro_weight"
            app:hintTextAppearance="?android:textAppearanceListItemSmall"
            android:paddingTop="16dp">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="5"
                android:maxLength="3"
                android:text="70"
                android:inputType="number"
                android:id="@+id/ed_weight" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>


</LinearLayout>