<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AddActivity"
    tools:showIn="@layout/activity_add">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/servInputLayout"
            android:hint="@string/dialog_serv"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="4"
                android:id="@+id/txtServ"
                android:maxLength="3"
                android:textSize="25sp"
                android:singleLine="true"
                android:text="@string/dialog_serv_std" />

        </android.support.design.widget.TextInputLayout>



        <android.support.v7.widget.AppCompatSpinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spServ"
            android:layout_alignBottom="@+id/servInputLayout"
            android:layout_toRightOf="@+id/servInputLayout"
            android:layout_marginLeft="16dp">

        </android.support.v7.widget.AppCompatSpinner>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            android:layout_below="@id/servInputLayout"
            android:layout_marginTop="12dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/rbLayout"
            android:layout_below="@+id/servInputLayout"
            android:paddingTop="32dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/meal_choose"/>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rgMeal">

                <android.support.v7.widget.AppCompatRadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rb_meal1"
                    android:text="@string/meal1"
                    android:layout_marginTop="6dp"
                    android:checked="true" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rb_meal2"
                    android:text="@string/meal2"/>

                <android.support.v7.widget.AppCompatRadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rb_meal3"
                    android:text="@string/meal3"/>

                <android.support.v7.widget.AppCompatRadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rb_meal4"
                    android:text="@string/meal4"/>

                <android.support.v7.widget.AppCompatRadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rb_meal5"
                    android:text="@string/meal5"/>
            </RadioGroup>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            android:layout_below="@+id/rbLayout"/>

    </RelativeLayout>


</android.support.v4.widget.NestedScrollView>