<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:background="@drawable/background_material_2">
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:elevation="3dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/intro_title"
                android:textSize="28sp"
                android:textColor="@android:color/white" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#F5F5F5">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/intro_activity"
                    android:textSize="16sp"
                    android:paddingBottom="16dp"/>

                <RadioGroup
                    android:id="@+id/rg_activity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/rb_activity1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/intro_activity_name_1"
                        android:textSize="16sp"
                        android:checked="true"/>

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/rb_activity2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/intro_activity_name_2"
                        android:textSize="16sp"/>

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/rb_activity3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/intro_activity_name_3"
                        android:textSize="16sp"/>

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/rb_activity4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/intro_activity_name_4"
                        android:textSize="16sp"/>

                </RadioGroup>

                <TextView
                    android:id="@+id/activity_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="50dp"/>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>
