<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="20dp">

        <androidx.constraintlayout.helper.widget.Flow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:flow_horizontalGap="16dp"
            app:constraint_referenced_ids="til_weight, til_time"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:id="@+id/til_weight"
            app:boxStrokeColor="@color/colorAccent"
            app:hintTextColor="@color/colorAccent"
            app:suffixText="@string/unit_kilogram"
            app:suffixTextColor="@color/text_inactive">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:textSize="20sp"
                android:hint="@string/dialog_weight"
                android:inputType="number|numberDecimal"
                android:maxLength="4"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/til_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            app:boxStrokeColor="@color/colorAccent"
            app:hintTextColor="@color/colorAccent"
            app:endIconDrawable="@drawable/ic_menu_down_grey600_24dp"
            app:endIconMode="custom"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="6"
                android:textSize="20sp"
                android:focusable="false"
                android:hint="@string/dialog_date"
                android:cursorVisible="false"/>

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
